--- a/targetmine/default.intermine.integrate.properties
+++ b/targetmine/default.intermine.integrate.properties
@@ -100,5 +100,5 @@ db.chembl-db.datasource.maxConnections=10
 db.chembl-psql.datasource.class=org.postgresql.jdbc3.Jdbc3PoolingDataSource
 db.chembl-psql.driver=org.postgresql.Driver
 db.chembl-psql.platform=PostgreSQL
-db.chembl-psql.datasource.dataSourceName=db.pub-db
+db.chembl-psql.datasource.dataSourceName=db.chembl-psql
 db.chembl-psql.datasource.maxConnections=10
