modify the keyword search and autocomplete settings

--- a/targetmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/targetmine/dbmodel/resources/objectstoresummary.config.properties
@@ -23,4 +23,11 @@ org.intermine.model.bio.Homologue.fields = type
 
 # autocomplete = in forms on the webapp, these fields will offer suggestions to the user as they type
 # index is created in post process create-autocomplete-index
-
+org.intermine.model.bio.Disease.autocomplete = title
+org.intermine.model.bio.DiseaseSynonym.autocomplete = name
+org.intermine.model.bio.GOTerm.autocomplete = name
+org.intermine.model.bio.InteractionTerm.autocomplete = name
+org.intermine.model.bio.OntologyTerm.autocomplete = name
+org.intermine.model.bio.Pathway.autocomplete = name
+org.intermine.model.bio.ProteinDomain.autocomplete = name shortName
+org.intermine.model.bio.SOTerm.autocomplete = name
