--- a/targetmine/dbmodel/resources/keyword_search.properties
+++ b/targetmine/dbmodel/resources/keyword_search.properties
@@ -1,10 +1,11 @@
 index.temp.directory = /tmp
 index.references.BioEntity = synonyms organism crossReferences
 index.references.OntologyTerm = synonyms
+index.references.Disease = synonyms
 #index.references.Gene = pathways proteins.proteinDomains goAnnotation.ontologyTerm
 #index.references.Protein = proteinDomains
 
-index.ignore = Comment CrossReference Location OntologyAnnotation OntologyRelation Sequence Synonym Publication Homologue BindingSiteInfo DrugProteinInteraction Author CompoundGroupInteraction 
+index.ignore = Comment CrossReference Location OntologyAnnotation OntologyRelation Sequence Synonym Homologue BindingSiteInfo DrugProteinInteraction CompoundGroupInteraction DiseaseSynonym 
 
 index.facet.single.Category = Category
 index.facet.single.Organism = organism.shortName
